PI-391 (#707)
* PI-391

* removed unused annotation

* updated default page size